--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-storybook": "~2.1.0",
+    "vue-cli-plugin-storybook": "^2.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
